reworked some of the CSS on the ResultsPage to use grid as well as flex. story text is still overflowing. overflow scroll not working and containeer won't stay within parent div. Looking for a fix

--- a/frontend/src/components/app/App.css
+++ b/frontend/src/components/app/App.css
@@ -12,11 +12,11 @@ html, body {
 
 .background-image-container {
     position: fixed;
-    margin: auto;
+    /* margin: auto; */
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
+    /* top: 0;
+    left: 0; */
     background-image: url("../../../public/images/background8.jpeg");
     background-size: cover;
 }
