--- a/frontend/src/components/result-page/ResultPage.css
+++ b/frontend/src/components/result-page/ResultPage.css
@@ -1,4 +1,4 @@
-.result-page {
+/* .result-page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,7 +7,7 @@
   width: 100%;
   padding-top: 1%;
   overflow: auto;
-}
+} */
 
 .resultpage-title {
   margin-left: 0%;
@@ -20,32 +20,37 @@
 }
 
 /* .book-background {
-  background-image: url("image_adobe_express.png");
-  background-size: 80%;
-  background-repeat: no-repeat;
-  height: 60%;
+  height: 100%;
 } */
 
-.results-page-container {
-  display: flex;
-  width: 80%;
-  opacity: 97%;
-  height: 100%;
-  margin: auto;
+.page-container {
+  display: grid;
+  grid-template-rows: 70% 30%;
+}
+
+.results-container {
+  display: grid;
+  grid-template-columns: 20% 60% 20%;
+}
+
+.storybook-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  justify-content: center;
 }
 
 .image-container {
-  flex: 1;
   padding: 10px;
+  margin-bottom: 10px;
 }
 
-.result-story-container {
-  margin-right: 10px;
-  width: 50%;
-  background: rgb(204, 204, 204); /* Fallback for older browsers without RGBA-support */
+.story-container {
+  background: rgb(204, 204, 204);
   background: rgba(204, 204, 204, 0.5);
-
-  /* padding: 10px; */
+  overflow-y: auto;
+  height: auto;
+  position: relative;
+  padding: 10px;
 }
 
 .resultpage-buttons {
@@ -74,6 +79,10 @@
 .resultpage-submit-button:hover {
   background-color: #11111179;
 }
+
+/* .turn-page-button {
+  display: inline;
+} */
 
 .nav-box {
   display: flex;
