--- a/frontend/src/components/story/Story.css
+++ b/frontend/src/components/story/Story.css
@@ -1,28 +1,16 @@
-
-
-.story-text-para {
-    margin: 10px;
-    width: 100%;
-    word-wrap: break-word;
+.story-text {
+    /* margin: 10px;
+    width: 100%; */
+    /* word-wrap: break-word; */
     color: black;
     font-family: Helvetica, Arial, sans-serif;
     text-align: center;
     font-weight: bold;
     font-size: 1.4vw;
-    box-sizing: border-box;
     padding-left: 2%;
     padding-right: 2%;
     padding-top: 2%;
     padding-bottom: 2%;
 }
-
-.story-container {
-    display: flex;
-    align-items: flex-start; 
-    justify-content: center;
-    width: 90%;
-    margin: 0;
-    padding: 0; 
-  }
   
 
